--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2392,6 +2392,8 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
+        height:  180px;
+        object-fit: cover;
 			}
 
 /* List */
